--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 <script type="text/javascript"> 
   VK.init(function() { 
     console.debug(arguments);
+    console.debug(VK);
+    console.debug(document);
   }, function() { 
     console.debug(arguments);
 }, '5.28'); 
