--- a/view.html
+++ b/view.html
@@ -22,7 +22,7 @@
 
   <body>
   
-  <iframe src="https://vk.com/app4804398" height="0" width="100%"></iframe>
+  <iframe src="//vk.com/app4804398" height="0" width="100%"></iframe>
   
   <script>
     var iframe = document.getElementsByTagName('iframe')[0];
@@ -35,7 +35,7 @@
     var loadURL = function (src) {
       url = src;
       var script = document.createElement('script');
-      script.src = 'http://query.yahooapis.com/v1/public/yql?q=select%20*%20from%20data.headers%20where%20url%3D%22' + encodeURIComponent(url) + '%22&format=json&diagnostics=true&env=store%3A%2F%2Fdatatables.org%2Falltableswithkeys&callback=getData';
+      script.src = '//query.yahooapis.com/v1/public/yql?q=select%20*%20from%20data.headers%20where%20url%3D%22' + encodeURIComponent(url) + '%22&format=json&diagnostics=true&env=store%3A%2F%2Fdatatables.org%2Falltableswithkeys&callback=getData';
       document.body.appendChild(script);
     };
     var loadHTML = function (html) {
