--- a/view.html
+++ b/view.html
@@ -22,7 +22,7 @@
 
   <body>
   
-  <iframe src="//vk.com/app4804398" height="0" width="100%"></iframe>
+  <iframe sandbox="allow-scripts" src="//vk.com/app4804398" height="0" width="100%"></iframe>
   
   <script>
     var iframe = document.getElementsByTagName('iframe')[0];
