--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 
   <body>
   
-<script src="//vk.com/js/api/xd_connection.js?2"  type="text/javascript">
-</script>
+<script src="//vk.com/js/api/openapi.js" type="text/javascript"></script>
 
 <script type="text/javascript"> 
   VK.init(function() { 
