--- a/test1.html
+++ b/test1.html
@@ -97,6 +97,11 @@ VK.Widgets.Poll("vk_poll", {width: "300"}, "172962765_dbf07dbfdc071dd814");
 <script type="text/javascript">
 VK.Widgets.Subscribe("vk_subscribe", {}, 3949134);
 </script>
+
+<div id="vk_recommend"></div>
+<script type="text/javascript">
+ VK.Widgets.Recommended('vk_recommend');
+</script>
     
   </body>
 </html>
